[package]
name = "gitmon"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
git2 = "0.18"
chrono = { version = "0.4", features = ["serde"] }
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder", "smtp-transport"] }
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
sha1 = "0.10"
dirs = "5.0"
