[package]
name = "gitmon"
version = "0.1.2"
edition = "2021"
license = "Unlicense"
repository = "https://github.com/dmarion/gitmon"
authors = ["dmarion"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
git2 = "0.18"
chrono = { version = "0.4", features = ["serde"] }
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder", "smtp-transport"] }
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
sha1 = "0.10"
dirs = "5.0"

[package.metadata.deb]
maintainer = "Damjan Marion <damjan.marion@gmail.com>"
extended-description = """\
A simple subcommand to monitor multiple git repos and sends e-mail report"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    { source = "target/release/gitmon", dest = "usr/bin/", mode = "755" },
    { source = "config.toml", dest = "etc/gitmon/", mode = "644"},
    { source = "template.html", dest = "usr/share/gitmon/", mode = "644"},
]
maintainer-scripts = "debian/"
systemd-units = { enable = true }
